Setting up for APS tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
+*~
+O.*
 *.swp
-__pycache__
-
-# Files generated during build
-configure/CONFIG.PyDevice
-O.linux*
-O.Common
-envPaths
+*BAK.adl
 bin/
-lib/
 db/
 dbd/
+html/
 include/
-*.pyc
+lib/
+templates/
+cdCommands
+envPaths
+dllPath.bat
+auto_settings.sav*
+auto_positions.sav*
+.ccfxprepdir/
+*.local
+.iocsh_history
